--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: "Seven-Segment";
+    src: local("Seven-Segment"), url("./assets/Seven\ Segment.ttf") format("truetype");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.font-seven-segment {
+    font-family: "Seven-Segment";
+}
+
+.operation-button {
+    @apply 
+        border 
+        border-gray-400 
+        rounded 
+        px-2 w-10 
+        bg-gray-100 hover:bg-gray-200 active:bg-blue-400
+        transition;
+}
+
+.no-spinner {
+    @apply appearance-none;
+}
+
+.no-spinner::-webkit-inner-spin-button,
+.no-spinner::-webkit-outer-spin-button {
+    @apply appearance-none;
+}
+
+.no-spinner {
+    @apply [appearance:textfield];
 }
